--- a/TPRNFuncionalidades/package.json
+++ b/TPRNFuncionalidades/package.json
@@ -38,7 +38,9 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "expo-image-picker": "~15.0.7",
-    "expo-av": "~14.0.7"
+    "expo-av": "~14.0.7",
+    "expo-haptics": "~13.0.1",
+    "expo-contacts": "~13.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
