--- a/TPRNFuncionalidades/package.json
+++ b/TPRNFuncionalidades/package.json
@@ -19,8 +19,13 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
+    "expo-barcode-scanner": "~13.0.1",
     "expo-constants": "~16.0.2",
+    "expo-contacts": "~13.0.5",
     "expo-font": "~12.0.9",
+    "expo-haptics": "~13.0.1",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -33,14 +38,11 @@
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
+    "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-av": "~14.0.7",
-    "expo-haptics": "~13.0.1",
-    "expo-contacts": "~13.0.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
